# claudex

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FORK.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pl.md  README.pt-BR.md  README.ru.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  cliff.toml  config.example.toml  config.example.yaml  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  image_mcp.rs  lib.rs  reasoning.rs  update.rs
src/config/: cmd.rs  image_mcp_doctor.rs  mod.rs  profile.rs
src/oauth/: handler.rs  manager.rs  mod.rs  providers.rs  source.rs  token.rs
src/process/: launch.rs
src/proxy/: error_translation.rs  fallback.rs  handler.rs  mod.rs  models.rs  reasoning.rs
src/proxy/adapter/: responses.rs
src/proxy/translate/: chat_completions.rs  chat_completions_stream.rs  responses.rs  responses_stream.rs
tests/: installers_static.rs  proxy_integration.rs
website/: astro.config.mjs
website/src/content/docs/de/: configuration.mdx  index.mdx  installation.mdx
website/src/content/docs/de/features/: configuration-sets.mdx  model-slot-mapping.mdx  oauth-subscriptions.mdx  self-update.mdx  smart-routing.mdx  terminal-hyperlinks.mdx  translation-proxy.mdx  tui-dashboard.mdx
website/src/content/docs/de/guides/: provider-setup.mdx
website/src/content/docs/de/reference/: cli.mdx  config.mdx  (+1 more)
website/src/content/docs/en/: configuration.mdx  index.mdx  installation.mdx
website/src/content/docs/es/: configuration.mdx  index.mdx  installation.mdx
website/src/content/docs/fr/: configuration.mdx  index.mdx  installation.mdx
website/src/content/docs/it/: configuration.mdx  index.mdx  installation.mdx
website/src/content/docs/ja/: configuration.mdx  index.mdx  installation.mdx
website/src/content/docs/ko/: configuration.mdx  index.mdx  installation.mdx
website/src/content/docs/pl/: configuration.mdx  index.mdx  installation.mdx
website/src/content/docs/pt-br/: configuration.mdx  index.mdx  installation.mdx
website/src/content/docs/ru/: configuration.mdx  index.mdx  installation.mdx
website/src/content/docs/zh-cn/: configuration.mdx  index.mdx  installation.mdx
website/src/content/docs/zh-tw/: configuration.mdx  index.mdx  installation.mdx
website/src/lib/i18n/: marketplace.ts
website/src/pages/[lang]/: marketplace.astro
(+132 files in other folders)
