[package]
name = "claudex"
version = "0.9.20"
edition = "2021"
autobins = false
description = "ChatGPT/Codex OAuth for Claude Code without an API key"
license = "MIT"
repository = "https://github.com/pilc80/claudex"
homepage = "https://claudex.space"
keywords = ["claude-code", "chatgpt", "codex", "oauth", "proxy"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "claudex"
path = "src/bin/claudex.rs"

[[bin]]
name = "claudex-config"
path = "src/bin/claudex-config.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (proxy)
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream", "form", "rustls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
figment = { version = "0.10", features = ["toml", "yaml", "env"] }
serde_yml = "0.0.12"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"

# TUI

# Keyring
keyring = { version = "3", features = ["apple-native", "linux-native"] }

# File watching (hot reload)
notify = "7"

# Async SSE streaming
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-stream = "0.3"

# UUID for request IDs
uuid = { version = "1", features = ["v4"] }

# Time
chrono = "0.4"

# Dirs for config path
dirs = "6"

# Byte counting
bytecount = "0.6"

# HTTP types
http = "1"
http-body-util = "0.1"
bytes = "1"

# System
libc = "0.2"
signal-hook = "0.4"

# Link detection
regex = "1"

# URL encoding
url = "2"

# Utility
which = "7"
open = "5"

# Self-update
self_update = { version = "0.42", features = ["rustls", "archive-tar", "archive-zip"], default-features = false }

# OAuth PKCE
sha2 = "0.10"
base64 = "0.22"
rand = "0.10"
urlencoding = "2.1.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["term", "poll", "signal", "process", "fs"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
